[gd_scene load_steps=4 format=3 uid="uid://b803y3g11f4up"]

[ext_resource type="Script" path="res://Scripts/GameOver.gd" id="1_gdeod"]
[ext_resource type="FontFile" uid="uid://degphstpbf0uh" path="res://Font/angas v3 ultra.ttf" id="2_ueumv"]

[sub_resource type="LabelSettings" id="LabelSettings_exepm"]
font_size = 80

[node name="GameOver" type="Node3D"]
script = ExtResource("1_gdeod")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.129412, 0.2, 1)

[node name="BoxContainer2" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.5
offset_top = -79.0
offset_right = 334.5
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/BoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ueumv")
text = "GAME OVER"
label_settings = SubResource("LabelSettings_exepm")
horizontal_alignment = 1

[node name="Score" type="Label" parent="Control/BoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ueumv")
theme_override_font_sizes/font_size = 40
text = "SCORE"
horizontal_alignment = 1
autowrap_mode = 3

[node name="BoxContainer" type="BoxContainer" parent="Control"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -40.0
offset_right = 21.0
grow_horizontal = 2
grow_vertical = 0

[node name="Back" type="Label" parent="Control/BoxContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_fonts/font = ExtResource("2_ueumv")
theme_override_font_sizes/font_size = 33
text = "BACK"
horizontal_alignment = 1

[connection signal="gui_input" from="Control/BoxContainer/Back" to="." method="_on_back_gui_input"]
[connection signal="mouse_entered" from="Control/BoxContainer/Back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="Control/BoxContainer/Back" to="." method="_on_back_mouse_exited"]
